add number format exception